2002-10-31  Bruno Haible  <bruno@clisp.org>

	* lib/autoconf/functions.m4 (_AC_FUNC_MALLOC_IF): Change message.
	Change name of cache variable to ac_cv_func_malloc_0_nonnull.
	(AC_FUNC_MALLOC): Change description of HAVE_MALLOC macro.
	(_AC_FUNC_REALLOC_IF): Change message. Change name of cache variable
	to ac_cv_func_realloc_0_nonnull.
	(AC_FUNC_REALLOC): Change description of HAVE_REALLOC macro.

2002-10-31  Akim Demaille  <akim@epita.fr>

	The test suite was no longer checking for trailing envvars and files.

	* tests/atspecific.m4 (AC_STATE_SAVE): Don't use quadrigraphs here.
	(AT_CHECK_ENV): Make sure the `state-ls.before file exists.

2002-10-31  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/programs.m4 (AC_PROG_MAKE_SET): Use and display
	`$(MAKE)' instead of '${MAKE}' to emphasize that we refer to the
	Make variable, not a shell variable.
	Suggested by Bruno Haible.

2002-10-31  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (load_configuration): Reject #args out of any
	language.

2002-10-31  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_MSG_LOG_CONFTEST): New.
	(_AC_PREPROC_IFELSE, _AC_COMPILE_IFELSE, _AC_LINK_IFELSE)
	(_AC_RUN_IFELSE): Use it.
	* lib/autoconf/lang.m4 (_AC_COMPILER_OBJEXT):
	(_AC_COMPILER_EXEEXT_DEFAULT): Likewise.
	* lib/autoconf/c.m4 (AC_LANG_SOURCE): Don't include confdefs.h,
	inline it.

2002-10-30  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (&parse_args, $help): Support --no-cache.
	* doc/autoconf.texi (autom4te Invocation): Adjust.
	Suggested by Tim van Holder.

2002-10-29  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Particular Functions): AC_FUNC_MALLOC and
	AC_FUNC_REALLOC check for compatibility with glibc, not POSIX.
	Problem reported by Bruno Haible.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Header Templates): Put also in words what the
	pictures says to assist free style readers.
	(Customizing autom4te): s/--cache=/--cache /.
