@@ -1,11 +1,12 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.29.
-.TH AUTOM4TE "1" "October 2002" "autom4te 2.54c" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.013.
+.TH AUTOM4TE "1" "November 2002" "GNU Autoconf 2.54c" FSF
 .SH NAME
-autom4te \- Generate files and scripts thanks to M4
+autom4te \- manual page for autom4te 2.54c
 .SH SYNOPSIS
 .B autom4te
 [\fIOPTION\fR] ... [\fIFILES\fR]
 .SH DESCRIPTION
+.PP
 Run GNU M4 on the FILES, avoiding useless runs.  Output the traces if tracing,
 the frozen file if freezing, otherwise the expansion of the FILES.
 .PP
@@ -43,11 +44,8 @@ report the warnings falling in CATEGORY
 \fB\-l\fR, \fB\-\-language\fR=\fILANG\fR
 specify the set of M4 macros to use
 .TP
-\fB\-C\fR, \fB\-\-cache\fR=\fIDIRECTORY\fR
+\fB\-C\fR, \fB\-\-cache\fR=\fI[DIRECTORY]\fR
 preserve results for future runs in DIRECTORY
-.TP
-\fB\-\-no\-cache\fR
-disable the cache
 .TP
 \fB\-m\fR, \fB\-\-mode\fR=\fIOCTAL\fR
 change the non trace output file mode (0666)
@@ -109,12 +107,6 @@ prepare to trace MACRO in a future run
 .TP
 \fB\-F\fR, \fB\-\-freeze\fR
 produce an M4 frozen state file for FILES
-.SH AUTHOR
-Written by Akim Demaille.
-.PP
-Copyright 2002 Free Software Foundation, Inc.
-This is free software; see the source for copying conditions.  There is NO
-warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "REPORTING BUGS"
 Report bugs to <bug-autoconf@gnu.org>.
 .SH "SEE ALSO"
@@ -140,3 +132,8 @@ programs are properly installed at your site, the command
 .B info autom4te
 .PP
 should give you access to the complete manual.
+.PP
+Copyright 2002 Free Software Foundation, Inc.
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
