@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.013.
-.TH AUTORECONF "1" "October 2002" "GNU Autoconf 2.54c" FSF
+.TH AUTORECONF "1" "November 2002" "GNU Autoconf 2.54c" FSF
 .SH NAME
 autoreconf \- manual page for autoreconf 2.54c
 .SH SYNOPSIS
