@@ -1,3 +1,12 @@
+2002-11-03  Akim Demaille  <akim@epita.fr>
+
+	* bin/autoreconf.in (&autoreconf_current_directory): New, extracted
+	from...
+	(&autoreconf): here.
+	($help, $make, &parse_args, &autoreconf_current_directory):
+	Support -m/--make.
+	* doc/autoconf.texi (autoreconf Invocation): Adjust.
+
 2002-10-31  Bruno Haible  <bruno@clisp.org>
 
 	* lib/autoconf/functions.m4 (_AC_FUNC_MALLOC_IF): Change message.
